# Trading_Bot

./: .env.example  .git_ignore  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE.txt  MANIFEST.in  README.md  TODO.md  bot.sh  general_config.yaml  general_config_example.yaml  instructions.sh  pyproject.toml  requirements.txt  setup.py
.claude/: settings.json  workflow.json
.claude/hooks/: pr_decision_guard.py  session_start.py
.github/workflows/: ci.yml
configs/: ls1.yaml  ls1_kraken.yaml
core/: __init__.py  data_loader.py  data_requests.py  orders_manager.py  request_bitfinex.py  strategy_manager.py  test_strategy_manager.py
core/tools/: __init__.py  time_tools.py  utils.py
data_loader/: data_loader.py  data_requests.py
deploy/: trading-bot.service
doc/dev/: 01-overview.md  02-architecture.md  03-decisions.md  04-brokers.md  05-testing.md  06-status.md  07-roadmap.md  08-program-plan.md  09-go-live.md  10-deploy.md  README.md
doc/dev/plans/: README.md
examples/: config.example.yaml  ls1_signal.py
execution_scripts/: bot.sh  bot_manager.sh  execution_strat.py  var_example.sh  var_instructions.sh
order_manager/: orders_manager.py
strategies/: README.md  example_function.cfg  example_function.py  exemple_function.cfg
strategies/another_example/: configuration.yaml  strategy.py
strategies/example/: configuration.yaml  ex_test2.cfg  strategy.py
strategy_manager/: API_kraken.py  __init__.py  cli_trading_bot_test.py  data_requests.py  get_results.py  logging.ini  main.py  manager.py  orders_manager.py  request_kraken.py  results_manager.py  results_manager2.py  serve_trading_bot_test.py  strategy_manager.py
strategy_manager/strategies/: example_function.cfg  example_function.py
strategy_manager/strategies/example/: configuration.yaml  strategy.py
strategy_manager/tests/: test_strategy_manager.py
strategy_manager/tools/: time_tools.py  utils.py
trading_bot/: API_kraken.py  __init__.py  _client.py  _connection.py  _containers.py  _exceptions.py  _order.py  _server.py  bot_manager.py  call_counters.py  cli.py  data_loader.py  data_requests.py  gui.py  logging.ini  orders.py  orders_manager.py  performance.py  results_manager.py  set_logging.py  strategy_manager.py
trading_bot/application/: __init__.py  config.py  data_feed.py  data_provider.py  events.py  live_fills.py  orchestrator.py  order_router.py  performance_service.py  pnl_series.py  portfolio.py  portfolio_feed.py  portfolio_runner.py  position_tracker.py  reconcile.py  risk.py  run_app.py  service_factory.py  strategy.py  strategy_runner.py  supervisor.py
trading_bot/brokers/: __init__.py  base.py  binance.py  kraken.py  kraken_ws.py  paper.py  registry.py
trading_bot/domain/: __init__.py  errors.py  fill.py  instrument.py  money.py  order.py  performance.py  position.py  signal.py
trading_bot/exchanges/: API_kraken.py  __init__.py
trading_bot/interfaces/: __init__.py
trading_bot/interfaces/api/: __init__.py  app.py
trading_bot/interfaces/cli/: __init__.py  _render.py  main.py
trading_bot/interfaces/ui/: __init__.py
trading_bot/legacy/: _connection.py  logging.ini  orders_manager.py  performance.py
trading_bot/legacy/exchanges/: API_bfx.py
trading_bot/legacy/tools/: __init__.py  setting_parameters.py
trading_bot/order/: io.py
trading_bot/storage/: __init__.py  sqlite_store.py
trading_bot/tests/: test_smoke.py
trading_bot/tests/application/: test_config.py  test_data_feed.py  test_data_provider.py  test_events.py  test_live_fills.py  test_ls1_e2e.py  test_orchestrator.py  test_order_router.py  test_performance_service.py  test_pnl_series.py  test_portfolio_config.py  test_portfolio_feed.py  test_portfolio_runner.py  test_portfolio_signal.py  test_position_tracker.py  test_reconcile.py  test_risk.py  test_run_app.py  test_service_factory.py  test_strategy.py  test_strategy_runner.py  test_supervisor.py
trading_bot/tests/brokers/: test_base.py  test_binance_rest.py  test_kraken_rest.py  test_kraken_ws.py  test_paper.py
trading_bot/tests/domain/: test_errors.py  test_fill_position.py  test_instrument.py  test_money.py  test_order.py  test_performance.py  test_signal.py
trading_bot/tests/fixtures/: __init__.py  fake_book.py
trading_bot/tests/hardening/: _faulty_broker.py  test_idempotency.py  test_kill_switch.py  test_reconciliation.py
trading_bot/tests/interfaces/: test_api.py  (+6 more)
trading_bot/tools/: __init__.py  call_counters.py  io.py  time_tools.py
trading_bot/transport/: __init__.py  http.py  ratelimit.py  ws.py
trading_bot_manager/: API_kraken.py  __init__.py  _client.py  _server.py  bot_manager.py  data_requests.py  get_results.py  logging.ini  main.py  orders_manager.py  request_bitfinex.py  results_manager.py  strategy_manager.py
trading_bot_manager/tests/: test_strategy_manager.py
trading_bot_manager/tools/: __init__.py  time_tools.py  utils.py
util/: time_tools.py
var/: alloc1.sqlite
(+81 files in other folders)
